--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
     scroll-padding-top: 2rem;
     list-style: none;
     text-align:center;
-    background-color: aquamarine;
 }
 selection {
     padding: 50px 10%;
@@ -17,6 +16,67 @@ selection {
     background: burlywood;
 }
 .navbar{
-    display: block;
-    text-align: unset;
+    height: 90px;
+    border: 2px solid black; 
+    background-color: #e1e8e9;
+    position: sticky;
+    top: 0;
+    left: 0;
+}
+.navbar :hover{
+    height:20px;
+    border: #fff;
+}
+.hams{
+    display: none;
+    position: absolute;
+    cursor: pointer;
+    top: 42%;
+    right: 2%;
+}
+
+.line{
+    width: 52px;
+    background-color: black;
+    height: 7px;
+    margin: 3px;
+    border-radius: 44px;
+
+}
+
+.navitems{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
+}
+
+.items{
+    margin:30px 62px;
+}
+
+.items a{
+    text-decoration: none;
+    color: black;
+    font-family: 'Explora', cursive;
+    font-weight: bolder;
+    font-size: 38px;
+}
+/*location*/
+.mapbox{
+    position: relative;
+    height: 400px;
+    width:40%;
+    background-color: white;
+    border: 3px solid rgb(0, 0, 0); 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.mapbox iframe{
+    width: 100%;
+    height: 100%;
+    filter: invert(100%); 
 }
